<resources>
    <string name="app_name">HealthyHome</string>
    <string name="login">Login</string>
    <string name="service_title_string">Please select the service you require</string>
    <string name="gardening">Gardening</string>
    <string name="dog_walking">Dog Walking</string>
    <string name="odd_jobs">Odd Jobs</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="bio">Bio</string>
    <string name="service">Service</string>
    <string name="add_provider">Add Provider</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="company_name">Company Name</string>
    <string name="edit_your_profile">Edit your bio to provide your customers with the most up to date information.</string>
    <string name="bookings_desc">View and manage your bookings or contact your customers</string>
    <string name="messages">Messages</string>
    <string name="messages_desc">View your messages, keep in contact with your customers.</string>
    <string name="offers">Offers</string>
    <string name="offers_desc">Fully customizable offers to attract customers</string>
    <string name="please_select_a_service">Select a service:</string>
    <string name="gardener">Gardener</string>
    <string name="fake_bio">
        Fluid Hygiene has been operating for over 25 years, \n and our over 1100 specialist cleaning staff are committed to delivering \n consistently high standards and a level of customer care that our \n competitors cannot match.

        \n\n\n\n We clean for high street brands, blue-chip companies and some of the biggest \n household names in the hospitality industry.
    </string>
    <string name="price">Price(P/H): £</string>
    <string name="provider_home">Provider Home</string>
    <string name="provider_sign_up">Provider Sign Up</string>
    <string name="services">Services</string>
    <string name="email_example">Email@example.com</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm">Confirm</string>
    <string name="full_name">Full Name</string>
    <string name="password_guide">Password must be 8 characters long, contain one uppercase, lowercase, number and symbol</string>

    <!-- Jakes strings -->
    <string name="oneOffService">One-off Service</string>
    <string name="regularService">Regular Service</string>
    <string name="numOfRooms">Number of Rooms</string>
    <string name="oneRoom">1</string>
    <string name="twoRooms">2</string>
    <string name="threeRooms">3</string>
    <string name="fourRooms">4</string>
    <string name="fiveRooms">5</string>
    <string name="pickDate">Tap to select a date</string>
    <string name="pickTime">Select a time : </string>
    <string name="next">Next</string>
    <string name="noExtras">This provider offers no additional services</string>
    <string name="bookingTitle">Your Booking</string>
    <string name="custName">Customer Name:</string>
    <string name="provName">Provider Name:</string>
    <string name="recurring">Recurring Service?</string>
    <string name="extrasSelect">Extras Selected</string>
    <string name="confirmBooking">Confirm Booking</string>

    <string name="cleaning">cleaning</string>
    <string name="locksmith">locksmith</string>
    <string name="removals">removals</string>
    <string name="provider_list_screen">Service Providers</string>
    <string name="temp">Temp</string>

    <!-- Irfans strings -->
    <string-array name="Services">
        <item>Cleaning</item>
        <item>Gardening</item>
        <item>Building</item>
        <item>HouseKeeper</item>
        <item>Dog Walker</item>
        <item>BabySitter</item>
    </string-array>

    <string name="finish">finish</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="would_you_like_to_hear_about_our_exciting_offers">would you like to hear about our exciting offers?</string>
    <string name="store_name">store_name</string>
    <string name="please_note_that_your_dbs_will_have_to_be_cqc_countersigned">please note that your dbs will have to be cqc countersigned</string>
    <string name="back">Back</string>
    <string name="bookings">Bookings</string>
    <string name="what_would_you_like_your_new_bio_to_be">What would you like your new bio to be?</string>
    <string name="about_me">About Me</string>
    <string name="tell_us_a_little_about_yourself">Tell us a little about yourself</string>
    <string name="would_you_like_to_set_a_new_price">Would you like to set a new price?</string>
    <string name="do_you_have_a_new_phone_number">Do you have a new Phone Number?</string>
    <string name="phone_number_change">Phone Number</string>
    <string name="new_email">New Email?</string>
    <string name="email_address">Email Address</string>
    <string name="service_type">Service Type</string>
    <string name="provider_name">Provider Name</string>
    <string name="provider_email">Provider Email</string>
    <string name="provider_phone_number">Phone Number</string>
    <string name="provider_password">Password</string>
    <string name="become_a_provider">Become a provider</string>
    <string name="company_email">Company Email</string>
    <string name="company_address_with_postcode">Company address including postcode</string>
    <string name="company_address">Company Address</string>
    <string name="company_postcode">Company Postcode</string>
    <string name="company_phone_number">Phone Number</string>
    <string name="service_provided">Service Provided</string>
    <string name="search_by_service">Search \n by \nService</string>
    <string name="post_your_needs">POST \n YOUR \n NEEDS</string>
    <string name="welcome">Welcome, %1$s </string>
    <string name="user_reviews">User Reviews</string>
    <string name="view_and_respond_to_your_user_reviews">View and respond to your user reviews</string>
    <string name="find_job">Find Job</string>
    <string name="find_jobs_posted_to_your_area_that_match_your_service">Find jobs posted to your area that match your service</string>
    <string name="reviews">Reviews</string>
    <string name="post_job">Post Job</string>
    <string name="job_responses">Job Responses</string>
    <string name="your_bookings">Your Bookings</string>
    <string name="firstName">firstName</string>
    <string name="review">Review:</string>
    <string name="please_log_in_or_register_your_account_to_continue">Please log in or register your account to continue.</string>
    <string name="login_register_account">Login/Register Account</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="postcode">Postcode</string>
    <string name="address_line_2_optional">Address Line 2 : Optional</string>
    <string name="hourlyRate">Hourly Rate</string>
    <string name="select_service">Select Service:</string>
    <string name="select_hourly_rate">Select Hourly Rate</string>
    <string name="submit">Submit</string>
    <string name="enter_an_optional_bio_here">Enter an optional bio here</string>
    <string name="go_to_customer_home">Go to Customer Home</string>
    <string name="provider_w_colon">Provider:</string>
    <string name="extras_with_colon">Extras:</string>
    <string name="address_with_colon">Address:</string>
    <string name="booking_for">Booking for:</string>
    <string name="customer_w_colon">Customer:</string>
    <string name="booking_id_withcolon">Booking ID:</string>
    <string name="booking_w_colon">Booking:</string>
    <string name="make_booking">Make Booking</string>
    <string name="bio_w_colon">Bio:</string>
    <string name="price_p_h">Price(P/H):</string>
    <string name="cleaning_c">Cleaning</string>
    <string name="gardener_c">Gardener</string>
    <string name="locksmith_c">Locksmith</string>
    <string name="removals_c">Removals</string>
    <string name="select_service_c">Select Service</string>
    <string name="edit">Edit</string>
    <string name="email_w_colon">Email:</string>
    <string name="contact_w_colon">Contact:</string>
    <string name="service_w_colon">Service:</string>
    <string name="responses">Responses</string>

    <string-array name="services_array">
        <item>Cleaning</item>
        <item>Locksmith</item>
        <item>Dog Walking</item>
        <item>Removals</item>
        <item>Gardening</item>
        <item>Odd Jobs</item>
    </string-array>

</resources>